# n8n-business-automation-workflows

./: .env.example  .gitignore  README.md  pyproject.toml  workflow_catalog.json
docs/samples/: sample_n8n_delivery_report.typ
n8n_business_automation_workflows.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_workflows.py
workflows/: daily_sales_digest.json  email_to_ai_summary.json  lead_form_to_sheets.json  telegram_alert_router.json
